components/TrustedBySection/index.module.scss
@import "@/assets/styles/mixins.scss";

.trustees {
  --scaling-factor: 1.3;

  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: rgba(255, 255, 255, 0);
  backdrop-filter: blur(8px);
  padding: calc(10.4rem / var(--scaling-factor))
    calc(17.6rem / var(--scaling-factor)) calc(12.6rem / var(--scaling-factor));

  &::before {
    content: " ";
    background-image: url(/assets/images/dashboard-background.png);
    display: inline-flex;
    position: absolute;
    width: 100%;
    height: calc(100% + 2rem);
    left: 0;
    top: 0;
    opacity: 0.15;
    z-index: -1;
  }

  :global {
    .trustedText {
      position: relative;
      padding-bottom: 2rem;
      p {
        font-weight: 600;
      }
      &::after {
        content: " ";
        display: inline-block;
        position: absolute;
        bottom: -1px;
        left: 0;
        width: 100%;
        border-bottom: 2px solid #1a3989;
        z-index: 1;
      }

      @media screen and (max-width: 768px) {
        padding-bottom: 1rem;
      }
    }
  }

  .imagesContainer {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: calc(5rem / var(--scaling-factor))
      calc(10rem / var(--scaling-factor));
    backdrop-filter: blur(20px);
    --border-radius: calc(5.33rem / var(--scaling-factor));
    border-radius: var(--border-radius);
    @include gradient-border(var(--border-radius));
    box-shadow: 0px 2px 4px rgba(255, 255, 255, 1);

    @media screen and (max-width: 1200px) {
      --border-radius: calc(2rem / var(--scaling-factor));
      padding: calc(2rem / var(--scaling-factor));
    }

    &::before {
      content: " ";
      position: absolute;
      width: 100%;
      height: 100%;
      top: 0;
      left: 0;
      border-radius: var(--border-radius);
      filter: blur(20px);
      background-image: url("/assets/images/clientbg.webp");
      background-size: cover;
      background-position: 50% 50%;
      background-attachment: fixed;
    }

    .bottomImages {
      width: calc(54rem / var(--scaling-factor));
      padding: calc(2.66rem / var(--scaling-factor))
        calc(8.66rem / var(--scaling-factor));

      display: flex;
      flex-wrap: wrap;
      align-items: center;
      justify-content: center;
      gap: calc(2.33rem / var(--scaling-factor));

      border-radius: calc(3.2rem / var(--scaling-factor));
      border: 1px solid rgba(26, 57, 137, 0.25);
      background: rgba(26, 57, 137, 0.64);
      box-shadow: 0px 4px 9px 0px rgba(80, 80, 160, 0.25);

      :global {
        .icon {
          height: calc(3rem / var(--scaling-factor));
          display: inline-flex;
          align-items: center;
        }
      }

      @media screen and (max-width: 1200px) {
        width: auto;
        padding: calc(1rem / var(--scaling-factor));
        border-radius: calc(1.5rem / var(--scaling-factor));
      }
    }

    @media screen and (max-width: 1200px) {
      margin: 0rem 1rem;
    }
  }

  @media screen and (max-width: 1200px) {
    padding: calc(2rem / var(--scaling-factor))
      calc(0rem / var(--scaling-factor)) calc(2rem / var(--scaling-factor));
  }
}

